--- a/uebungen/D2/uebung1/style.css
+++ b/uebungen/D2/uebung1/style.css
@@ -15,13 +15,15 @@ header {
 }
 
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
     gap: 20px;
     padding: 20px;
 }
 
 .grid-item {
+    flex: 1 1 150px;
+    max-width: 100%;
     text-align: center;
 }
 
