--- a/uebungen/H2/Uebung3/style.css
+++ b/uebungen/H2/Uebung3/style.css
@@ -45,6 +45,7 @@ main img{
 footer{
     position: fixed;
     bottom: 0;
-    left: 50%;
+    left: 0;
     width: 100%;
+    text-align: center;
 }
