--- a/uebungen/D3/uebung1/uebung1.css
+++ b/uebungen/D3/uebung1/uebung1.css
@@ -31,7 +31,16 @@ body {
 }
 
 
-@media (min-width: 600px) {
+@media (min-width: 0px) and (max-width: 600px) {
+    .gallery {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    
+    h1 {
+        font-size: 2.5rem;
+    }
+}
+@media (min-width: 600px) and (max-width: 900px) {
     .gallery {
         grid-template-columns: repeat(2, 1fr);
     }
