semantische Tags hinzugefügt - H2 uebung 3

--- a/uebungen/H2/Uebung3/wireframe1/style.css
+++ b/uebungen/H2/Uebung3/wireframe1/style.css
@@ -26,8 +26,8 @@ header div{
     max-width: 100%;
     max-height: 100%;
 }
-.blogsection{
-    width: 40%;
+article{
+    width: 50%;
     float: left;
 }
 main{
