--- a/Projekt/Code/AboutUs.css
+++ b/Projekt/Code/AboutUs.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -7,56 +13,82 @@ body {
     min-height: 100vh;
 }
 
+
 header {
-    display: flex;
-    align-items: center;
-    padding: 10px;
-    background-color: #f4f4f4;
-    border-bottom: 1px solid #ccc;
+    background-color: rgba(0, 0, 0, 0.5); 
+    padding: 20px;
+    text-align: center;
 }
 
-header img {
-    height: 40px;
-    margin-right: 10px;
+header .logo {
+    width: 100px;
+    height: auto;
 }
 
 header h1 {
-    margin: 0;
+    font-size: 24px;
+    margin-top: 10px;
 }
 
 nav {
-    background-color: #333;
+    background-color: rgba(0, 0, 0, 0.5); 
+    padding: 10px;
+    text-align: center;
 }
 
 nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+    list-style-type: none;
 }
 
 nav ul li {
-    margin: 0;
+    display: inline-block;
+    margin-right: 10px;
 }
 
 nav ul li a {
-    display: block;
-    padding: 10px 20px;
     color: white;
     text-decoration: none;
+    padding: 5px 10px;
 }
 
 nav ul li a:hover {
-    background-color: #575757;
+    background-color: rgba(255, 255, 255, 0.1); 
+    border-radius: 5px;
 }
 
 main {
-    flex: 1;
-    padding: 20px;
+    padding: 0px;
+}
+
+.welcome-section {
+    position: relative;
+    min-height: 300px; 
     display: flex;
-    justify-content: center;
     align-items: center;
 }
+
+
+footer {
+    background-color: rgba(0, 0, 0, 0.8); 
+    color: white;
+    text-align: left;
+    padding: 58px;
+    margin-top: 200px;
+    
+    justify-content: space-between;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+  }
+  
+  .grid-item {
+   
+    padding: 20px;
+  }
+
 
 .team {
     display: flex;
@@ -85,9 +117,10 @@ main {
     max-height: 100%;
 }
 
-footer {
-    background-color: #f4f4f4;
-    text-align: center;
-    padding: 10px;
-    border-top: 1px solid #ccc;
-}
+
+
+
+
+
+
+
