--- a/Projekt/Code/HomePage.css
+++ b/Projekt/Code/HomePage.css
@@ -112,8 +112,13 @@ footer {
     justify-content: space-between;
 }
 
-.Contact.Leona {
-    text-align: center;
-    flex: 1;
-    
-}
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+  }
+  
+  .grid-item {
+   
+    padding: 20px;
+  }
