--- a/Projekt/Code/CarsPage.css
+++ b/Projekt/Code/CarsPage.css
@@ -1,10 +1,19 @@
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0; 
+    background-image: url('fotos/Car1.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed; 
+    color: white;
+    overflow-x: hidden;  
+}
 
 header {
     background-color: rgba(0, 0, 0, 0.5); 
@@ -59,24 +68,70 @@ main {
     align-items: center;
 }
 
-
 footer {
     background-color: rgba(0, 0, 0, 0.8); 
     color: white;
     text-align: left;
-    padding: 58px;
-    margin-top: 200px;
-    
+    padding: 50px;
+    margin-top: 175px;
     justify-content: space-between;
+}
+
+.card-style {
+    background-color: rgba(0, 0, 0, 0.5); 
+    height: 450px;
+    width: 350px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    color: black;
+    text-align: left;
+}
+
+.image-style {
+    height: 250px;
+    width: 350px;
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.card-content {
+    padding: 15px;
+    height: 100px;
+    text-overflow: ellipsis;
+}
+
+.card-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
 }
 
 .grid-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 20px;
-  }
-  
-  .grid-item {
-   
+}
+
+.grid-item {
     padding: 20px;
-  }
+}
+
+.btn-primary {
+    background-color: rgba(255, 255, 255, 0.1);
+    color: white; 
+    border: none;
+    padding: 10px 20px; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
+    font-size: 16px; 
+    margin: 10px 0; 
+    cursor: pointer;  
+    border-radius: 5px;
+}
+
+.btn-primary:hover {
+    background-color: rgba(255, 255, 255, 0.1); 
+}
