--- a/Projekt/Code/HomePage.css
+++ b/Projekt/Code/HomePage.css
@@ -9,7 +9,7 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0; 
-    background-image: url('/fotos/Car1.jpg');
+    background-image: url('fotos/Car1.jpg   ');
     background-size: cover;
     background-position: center;
     background-attachment: fixed; 
@@ -76,7 +76,7 @@ main {
     left: 0;
     width: 100%;
     height: 180%;
-    background-image: url('/fotos/Car1.jpg');
+    background-image: url('fotos/Car1.jpg');
     background-size: cover;
     background-position: center;
     filter: blur(8px); 
@@ -106,9 +106,8 @@ footer {
     background-color: rgba(0, 0, 0, 0.8); 
     color: white;
     text-align: left;
-    padding: 58px;
-    margin-top: 200px;
-    
+    padding: 50px;
+    margin-top: 175px;
     justify-content: space-between;
 }
 
