--- a/Projekt/Code/CarsPage.css
+++ b/Projekt/Code/CarsPage.css
@@ -119,7 +119,7 @@ footer {
 }
 
 .btn-primary {
-    background-color: rgba(255, 255, 255, 0.1);
+    
     color: white; 
     border: none;
     padding: 10px 20px; 
@@ -134,4 +134,5 @@ footer {
 
 .btn-primary:hover {
     background-color: rgba(255, 255, 255, 0.1); 
+    border-radius: 5px; 
 }
