--- a/Projekt/Code/CarsPage.css
+++ b/Projekt/Code/CarsPage.css
@@ -101,11 +101,16 @@ footer {
     text-overflow: ellipsis;
 }
 
+.card-content h2 {
+    color: white;
+}
+
 .card-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr); 
     grid-auto-rows: auto;
     grid-gap: 1rem;
+    color: white;
 }
 
 .grid-container {
@@ -119,7 +124,6 @@ footer {
 }
 
 .btn-primary {
-    
     color: white; 
     border: none;
     padding: 10px 20px; 
