--- a/Projekt/Code/PasswordResetConfirmation.css
+++ b/Projekt/Code/PasswordResetConfirmation.css
@@ -19,3 +19,40 @@ h1 {
 p {
     margin: 0;
 }
+
+
+@media screen and (min-width: 600px) {
+    body {
+        padding: 20px;
+    }
+
+    h1 {
+        font-size: 2em;
+    }
+
+    p {
+        font-size: 1.2em;
+    }
+}
+
+
+@media screen and (min-width: 900px) {
+    h1 {
+        font-size: 2.5em;
+    }
+
+    p {
+        font-size: 1.4em;
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    h1 {
+        font-size: 3em;
+    }
+
+    p {
+        font-size: 1.6em;
+    }
+}
