--- a/Projekt/Code/CarsPage.css
+++ b/Projekt/Code/CarsPage.css
@@ -107,7 +107,7 @@ footer {
 
 .card-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); 
+    grid-template-columns: 1fr; 
     grid-auto-rows: auto;
     grid-gap: 1rem;
     color: white;
@@ -115,7 +115,7 @@ footer {
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr; 
     grid-gap: 20px;
 }
 
@@ -139,4 +139,37 @@ footer {
 .btn-primary:hover {
     background-color: rgba(255, 255, 255, 0.1); 
     border-radius: 5px; 
+}
+
+
+@media screen and (min-width: 600px) {
+    .card-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+
+@media screen and (min-width: 900px) {
+    .card-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    .card-grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
+
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
