--- a/Projekt/Code/ForgotPassword.css
+++ b/Projekt/Code/ForgotPassword.css
@@ -39,10 +39,31 @@ button {
 }
 
 button:hover {
-    background-color: #464646;
+    background-color: #333333;
 }
 
 h1 {
     text-align: center;
     margin-bottom: 10px;
+}
+
+
+@media screen and (min-width: 600px) {
+    form {
+        width: 400px;
+    }
+}
+
+
+@media screen and (min-width: 900px) {
+    form {
+        width: 500px;
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    form {
+        width: 600px;
+    }
 }
