--- a/Projekt/Code/Registration.css
+++ b/Projekt/Code/Registration.css
@@ -12,7 +12,12 @@ body {
 }
 
 form {
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
+    padding: 20px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 label {
@@ -43,7 +48,7 @@ button {
 }
 
 button:hover {
-    background-color: #464646;
+    background-color: #333333;
 }
 
 h1 {
@@ -62,4 +67,25 @@ h1 {
     align-items: center;
     margin-right: 10px;
     font-weight: normal;
+}
+
+
+@media screen and (min-width: 600px) {
+    form {
+        max-width: 400px;
+    }
+}
+
+
+@media screen and (min-width: 900px) {
+    form {
+        max-width: 500px;
+    }
+}
+
+
+@media screen and (min-width: 1200px) {
+    form {
+        max-width: 600px;
+    }
 }
