--- a/Projekt/Code/ForgotPassword.css
+++ b/Projekt/Code/ForgotPassword.css
@@ -48,22 +48,61 @@ h1 {
 }
 
 
+@media screen and (max-width: 320px) {
+    form {
+        max-width: 280px;
+        padding: 10px;
+    }
+
+    input[type="text"], input[type="email"], input[type="password"], select, button {
+        width: calc(100% - 10px);
+        padding: 6px;
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    form {
+        max-width: 320px;
+        padding: 15px;
+    }
+
+    input[type="text"], input[type="email"], input[type="password"], select, button {
+        width: calc(100% - 15px);
+        padding: 7px;
+    }
+}
+
+
+@media screen and (max-width: 600px) {
+    form {
+        max-width: 360px;
+        padding: 20px;
+    }
+
+    input[type="text"], input[type="email"], input[type="password"], select, button {
+        width: calc(100% - 20px);
+        padding: 8px;
+    }
+}
+
+
 @media screen and (min-width: 600px) {
     form {
-        width: 400px;
+        max-width: 400px;
     }
 }
 
 
 @media screen and (min-width: 900px) {
     form {
-        width: 500px;
+        max-width: 500px;
     }
 }
 
 
 @media screen and (min-width: 1200px) {
     form {
-        width: 600px;
+        max-width: 600px;
     }
 }
