--- a/Projekt/Code/PasswordResetConfirmation.css
+++ b/Projekt/Code/PasswordResetConfirmation.css
@@ -21,38 +21,61 @@ p {
 }
 
 
-@media screen and (min-width: 600px) {
-    body {
+@media screen and (max-width: 320px) {
+    form {
+        max-width: 280px;
+        padding: 10px;
+    }
+
+    input[type="text"], input[type="email"], input[type="password"], select, button {
+        width: calc(100% - 10px);
+        padding: 6px;
+    }
+}
+
+
+@media screen and (max-width: 480px) {
+    form {
+        max-width: 320px;
+        padding: 15px;
+    }
+
+    input[type="text"], input[type="email"], input[type="password"], select, button {
+        width: calc(100% - 15px);
+        padding: 7px;
+    }
+}
+
+
+@media screen and (max-width: 600px) {
+    form {
+        max-width: 360px;
         padding: 20px;
     }
 
-    h1 {
-        font-size: 2em;
+    input[type="text"], input[type="email"], input[type="password"], select, button {
+        width: calc(100% - 20px);
+        padding: 8px;
     }
+}
 
-    p {
-        font-size: 1.2em;
+
+@media screen and (min-width: 600px) {
+    form {
+        max-width: 400px;
     }
 }
 
 
 @media screen and (min-width: 900px) {
-    h1 {
-        font-size: 2.5em;
-    }
-
-    p {
-        font-size: 1.4em;
+    form {
+        max-width: 500px;
     }
 }
 
 
 @media screen and (min-width: 1200px) {
-    h1 {
-        font-size: 3em;
-    }
-
-    p {
-        font-size: 1.6em;
+    form {
+        max-width: 600px;
     }
 }
