--- a/Projekt/Code/ForgotPassword.css
+++ b/Projekt/Code/ForgotPassword.css
@@ -9,100 +9,107 @@ body {
     height: 100vh;
     background-color: #f5f5f5;
     overflow: hidden;
-}
-
-form {
+  }
+  
+  form {
     width: 300px;
-}
-
-label {
+  }
+  
+  label {
     margin-bottom: 5px;
     font-weight: bold;
     display: block;
-}
-
-input[type="email"], button {
+  }
+  
+  input[type="email"], button {
     width: calc(100% - 20px);
     padding: 8px;
     margin-bottom: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}
-
-button {
+  }
+  
+  button {
     background-color: #464646;
     color: white;
     border: none;
     cursor: pointer;
     padding: 10px;
     margin-top: 10px;
-}
-
-button:hover {
+  }
+  
+  button:hover {
     background-color: #333333;
-}
-
-h1 {
+  }
+  
+  h1 {
     text-align: center;
     margin-bottom: 10px;
-}
-
-
-@media screen and (max-width: 320px) {
+  }
+  
+  @media screen and (max-width: 320px) {
     form {
-        max-width: 280px;
-        padding: 10px;
+      max-width: 280px;
+      padding: 10px;
     }
-
-    input[type="text"], input[type="email"], input[type="password"], select, button {
-        width: calc(100% - 10px);
-        padding: 6px;
+  
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    select,
+    button {
+      width: calc(100% - 12px);
+      padding: 6px;
     }
-}
-
-
-@media screen and (max-width: 480px) {
+  }
+  
+  @media screen and (max-width: 480px) {
     form {
-        max-width: 320px;
-        padding: 15px;
+      max-width: 320px;
+      padding: 15px;
     }
-
-    input[type="text"], input[type="email"], input[type="password"], select, button {
-        width: calc(100% - 15px);
-        padding: 7px;
+  
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    select,
+    button {
+      width: calc(100% - 14px);
+      padding: 7px;
     }
-}
-
-
-@media screen and (max-width: 600px) {
+  }
+  
+  @media screen and (max-width: 600px) {
     form {
-        max-width: 360px;
-        padding: 20px;
+      max-width: 360px;
+      padding: 20px;
     }
-
-    input[type="text"], input[type="email"], input[type="password"], select, button {
-        width: calc(100% - 20px);
-        padding: 8px;
+  
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    select,
+    button {
+      width: calc(100% - 16px);
+      padding: 8px;
     }
-}
-
-
-@media screen and (min-width: 600px) {
+  }
+  
+  @media screen and (min-width: 600px) {
     form {
-        max-width: 400px;
+      max-width: 400px;
     }
-}
-
-
-@media screen and (min-width: 900px) {
+  }
+  
+  @media screen and (min-width: 900px) {
     form {
-        max-width: 500px;
+      max-width: 500px;
     }
-}
-
-
-@media screen and (min-width: 1200px) {
+  }
+  
+  @media screen and (min-width: 1200px) {
     form {
-        max-width: 600px;
+      max-width: 600px;
     }
-}
+  }
+  
