--- a/Projekt/Code/PasswordResetConfirmation.css
+++ b/Projekt/Code/PasswordResetConfirmation.css
@@ -9,73 +9,102 @@ body {
     height: 100vh;
     background-color: #f5f5f5;
     overflow: hidden;
-    text-align: center; 
-}
-
-h1 {
+    text-align: center;
+    color: #333;
+    padding: 20px;
+  }
+  
+  h1 {
     margin-bottom: 10px;
-}
-
-p {
+    font-size: 2.75rem;
+  }
+  
+  p {
     margin: 0;
-}
-
-
-@media screen and (max-width: 320px) {
-    form {
-        max-width: 280px;
-        padding: 10px;
+    font-size: 1.625rem;
+  }
+  
+  @media screen and (max-width: 320px) {
+    body {
+      padding: 10px;
     }
-
-    input[type="text"], input[type="email"], input[type="password"], select, button {
-        width: calc(100% - 10px);
-        padding: 6px;
+  
+    h1 {
+      font-size: 1.5rem;
     }
-}
-
-
-@media screen and (max-width: 480px) {
-    form {
-        max-width: 320px;
-        padding: 15px;
+  
+    p {
+      font-size: 1rem;
     }
-
-    input[type="text"], input[type="email"], input[type="password"], select, button {
-        width: calc(100% - 15px);
-        padding: 7px;
+  }
+  
+  @media screen and (max-width: 480px) {
+    body {
+      padding: 15px;
     }
-}
-
-
-@media screen and (max-width: 600px) {
-    form {
-        max-width: 360px;
-        padding: 20px;
+  
+    h1 {
+      font-size: 1.75rem;
     }
-
-    input[type="text"], input[type="email"], input[type="password"], select, button {
-        width: calc(100% - 20px);
-        padding: 8px;
+  
+    p {
+      font-size: 1.125rem;
     }
-}
-
-
-@media screen and (min-width: 600px) {
-    form {
-        max-width: 400px;
+  }
+  
+  @media screen and (max-width: 600px) {
+    body {
+      padding: 20px;
     }
-}
-
-
-@media screen and (min-width: 900px) {
-    form {
-        max-width: 500px;
+  
+    h1 {
+      font-size: 2rem;
     }
-}
-
-
-@media screen and (min-width: 1200px) {
-    form {
-        max-width: 600px;
+  
+    p {
+      font-size: 1.25rem;
     }
-}
+  }
+  
+  @media screen and (min-width: 600px) {
+    body {
+      padding: 20px;
+    }
+  
+    h1 {
+      font-size: 2.25rem;
+    }
+  
+    p {
+      font-size: 1.375rem;
+    }
+  }
+  
+  @media screen and (min-width: 900px) {
+    body {
+      padding: 20px;
+    }
+  
+    h1 {
+      font-size: 2.5rem;
+    }
+  
+    p {
+      font-size: 1.5rem;
+    }
+  }
+  
+  @media screen and (min-width: 1200px) {
+    body {
+      padding: 20px;
+    }
+  
+    h1 {
+      font-size: 2.75rem;
+    }
+  
+    p {
+      font-size: 1.625rem;
+    }
+  }
+  
