--- a/Projekt/Code/Registration.css
+++ b/Projekt/Code/Registration.css
@@ -9,122 +9,134 @@ body {
     background-color: #f5f5f5;
     flex-direction: column;
     overflow: hidden;
-}
-
-form {
+  }
+  
+  form {
     width: 100%;
     max-width: 300px;
     padding: 20px;
     background: white;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-label {
-    margin-bottom: 5px; 
+  }
+  
+  label {
+    margin-bottom: 5px;
     font-weight: bold;
     display: block;
-}
-
-input[type="text"], input[type="email"], input[type="password"], select, button {
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  input[type="password"],
+  select,
+  button {
     width: calc(100% - 20px);
     padding: 8px;
-    margin-bottom: 5px; 
+    margin-bottom: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}
-
-input[type="checkbox"], input[type="radio"] {
+  }
+  
+  input[type="checkbox"],
+  input[type="radio"] {
     margin-right: 10px;
-}
-
-button {
+  }
+  
+  button {
     background-color: #464646;
     color: white;
     border: none;
     cursor: pointer;
     padding: 10px;
-    margin-top: 10px; 
-}
-
-button:hover {
+    margin-top: 10px;
+  }
+  
+  button:hover {
     background-color: #333333;
-}
-
-h1 {
+  }
+  
+  h1 {
     text-align: center;
-    margin-bottom: 10px; 
-}
-
-.form-group {
+    margin-bottom: 10px;
+  }
+  
+  .form-group {
     display: flex;
     align-items: center;
-    margin-bottom: 5px; 
-}
-
-.form-group label {
+    margin-bottom: 5px;
+  }
+  
+  .form-group label {
     display: flex;
     align-items: center;
     margin-right: 10px;
     font-weight: normal;
-}
-
-
-@media screen and (max-width: 320px) {
+  }
+  
+  @media screen and (max-width: 320px) {
     form {
-        max-width: 280px;
-        padding: 10px;
+      max-width: 280px;
+      padding: 10px;
     }
-
-    input[type="text"], input[type="email"], input[type="password"], select, button {
-        width: calc(100% - 10px);
-        padding: 6px;
+  
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    select,
+    button {
+      width: calc(100% - 12px);
+      padding: 6px;
     }
-}
-
-
-@media screen and (max-width: 480px) {
+  }
+  
+  @media screen and (max-width: 480px) {
     form {
-        max-width: 320px;
-        padding: 15px;
+      max-width: 320px;
+      padding: 15px;
     }
-
-    input[type="text"], input[type="email"], input[type="password"], select, button {
-        width: calc(100% - 15px);
-        padding: 7px;
+  
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    select,
+    button {
+      width: calc(100% - 14px);
+      padding: 7px;
     }
-}
-
-
-@media screen and (max-width: 600px) {
+  }
+  
+  @media screen and (max-width: 600px) {
     form {
-        max-width: 360px;
-        padding: 20px;
+      max-width: 360px;
+      padding: 20px;
     }
-
-    input[type="text"], input[type="email"], input[type="password"], select, button {
-        width: calc(100% - 20px);
-        padding: 8px;
+  
+    input[type="text"],
+    input[type="email"],
+    input[type="password"],
+    select,
+    button {
+      width: calc(100% - 16px);
+      padding: 8px;
     }
-}
-
-
-@media screen and (min-width: 600px) {
+  }
+  
+  @media screen and (min-width: 600px) {
     form {
-        max-width: 400px;
+      max-width: 400px;
     }
-}
-
-
-@media screen and (min-width: 900px) {
+  }
+  
+  @media screen and (min-width: 900px) {
     form {
-        max-width: 500px;
+      max-width: 500px;
     }
-}
-
-
-@media screen and (min-width: 1200px) {
+  }
+  
+  @media screen and (min-width: 1200px) {
     form {
-        max-width: 600px;
+      max-width: 600px;
     }
-}
+  }
+  
