--- a/Projekt/Code/DetailedCars.scss
+++ b/Projekt/Code/DetailedCars.scss
@@ -1,4 +1,3 @@
-
 $primary-color: rgba(0, 0, 0, 0.5);
 $secondary-color: rgba(255, 255, 255, 0.1);
 $text-color: white;
@@ -8,7 +7,6 @@ $padding-medium: 20px;
 $padding-large: 50px;
 $border-radius: 5px;
 $highlight-color: #007BFF;
-
 
 @mixin flex-center {
   display: flex;
@@ -26,7 +24,6 @@ $highlight-color: #007BFF;
   gap: 20px;
 }
 
-
 * {
   margin: 0;
   padding: 0;
@@ -34,7 +31,7 @@ $highlight-color: #007BFF;
 }
 
 body {
-  font-family: $font-family;
+  font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
@@ -43,49 +40,44 @@ body {
 }
 
 header {
-  background-color: $primary-color;
-  padding: $padding-medium;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px;
   text-align: center;
   width: 100%;
-
-  .logo {
-    width: 100px;
-    height: auto;
-  }
-
-  h1 {
-    font-size: 24px;
-    margin-top: $padding-small;
-    color: $text-color;
-  }
+}
+header .logo {
+  width: 100px;
+  height: auto;
+}
+header h1 {
+  font-size: 24px;
+  margin-top: 10px;
+  color: white;
 }
 
 nav {
-  background-color: $primary-color;
-  padding: $padding-small;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 10px;
   width: 100%;
-
-  ul {
-    list-style-type: none;
-    @include flex-center;
-    padding: 0;
-    margin: 0;
-
-    li {
-      margin-right: $padding-small;
-
-      a {
-        color: $text-color;
-        text-decoration: none;
-        padding: $padding-small $padding-medium;
-
-        &:hover {
-          background-color: $secondary-color;
-          border-radius: $border-radius;
-        }
-      }
-    }
-  }
+}
+nav ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  margin: 0;
+}
+nav ul li {
+  margin-right: 10px;
+}
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  padding: 10px 20px;
+}
+nav ul li a:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
 }
 
 main {
@@ -95,23 +87,32 @@ main {
 .welcome-section {
   position: relative;
   min-height: 300px;
-  @include flex-center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
-  @include container-style(column, $padding-medium, 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px;
+  width: 100%;
+  gap: 20px;
 }
 
 .image-container {
   flex: 1;
-  @include flex-center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-
-  img {
-    max-width: 100%;
-    height: auto;
-    width: 100%;
-  }
+}
+.image-container img {
+  max-width: 100%;
+  height: auto;
+  width: 100%;
 }
 
 .details-container {
@@ -121,50 +122,53 @@ main {
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  margin-top: $padding-medium;
+  margin-top: 20px;
+}
+.details-container h2 {
+  margin-top: 0;
+  text-align: center;
+}
 
-  h2 {
-    margin-top: 0;
-    text-align: center;
-  }
-
-  .details-grid {
-    display: flex;
-    flex-direction: column;
-    gap: $padding-small;
-    width: 100%;
-
-    .detail-item {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-    }
-  }
+.details-grid {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+}
+.detail-item {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
 
 .contact-button {
-  background-color: $highlight-color;
-  color: $text-color;
-  padding: $padding-small $padding-medium;
+  background-color: #007BFF;
+  color: white;
+  padding: 10px 20px;
   border: none;
   cursor: pointer;
   font-size: 16px;
-  border-radius: $border-radius;
-  margin-top: $padding-medium;
+  border-radius: 5px;
+  margin-top: 20px;
 }
 
 .refresh-icon {
-  margin-top: $padding-small;
-
-  img {
-    height: 24px;
-    width: 24px;
-  }
+  margin-top: 10px;
+}
+.refresh-icon img {
+  height: 24px;
+  width: 24px;
 }
 
 @media screen and (min-width: 600px) {
   .container {
-    @include container-style(row, $padding-large, 80%);
+    display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 50px;
+  width: 80%;
+  gap: 20px;
   }
 
   .image-container, .details-container {
@@ -174,13 +178,13 @@ main {
 
   .details-container {
     align-items: flex-start;
-    margin-left: $padding-medium;
+    margin-left: 20px;
   }
 }
 
 @media screen and (min-width: 900px) {
   .container {
-    padding: $padding-large;
+    padding: 50px;
     width: 80%;
   }
 }
