--- a/Projekt/Code/PasswordResetConfirmation.css
+++ b/Projekt/Code/PasswordResetConfirmation.css
@@ -24,87 +24,68 @@ body {
     font-size: 1.625rem;
   }
   
-  @media screen and (max-width: 320px) {
-    body {
-      padding: 10px;
-    }
-  
-    h1 {
-      font-size: 1.5rem;
-    }
-  
-    p {
-      font-size: 1rem;
-    }
+  /* Kleine Smartphones */
+@media screen and (max-width: 320px) {
+  h1 {
+      font-size: 1.5em;
   }
-  
-  @media screen and (max-width: 480px) {
-    body {
-      padding: 15px;
-    }
-  
-    h1 {
-      font-size: 1.75rem;
-    }
-  
-    p {
-      font-size: 1.125rem;
-    }
+
+  p {
+      font-size: 1em;
   }
-  
-  @media screen and (max-width: 600px) {
-    body {
-      padding: 20px;
-    }
-  
-    h1 {
-      font-size: 2rem;
-    }
-  
-    p {
-      font-size: 1.25rem;
-    }
+}
+
+/* Normale Smartphones */
+@media screen and (max-width: 480px) {
+  h1 {
+      font-size: 1.8em;
   }
-  
-  @media screen and (min-width: 600px) {
-    body {
-      padding: 20px;
-    }
-  
-    h1 {
-      font-size: 2.25rem;
-    }
-  
-    p {
-      font-size: 1.375rem;
-    }
+
+  p {
+      font-size: 1.2em;
   }
-  
-  @media screen and (min-width: 900px) {
-    body {
-      padding: 20px;
-    }
-  
-    h1 {
-      font-size: 2.5rem;
-    }
-  
-    p {
-      font-size: 1.5rem;
-    }
+}
+
+/* Große Smartphones*/
+@media screen and (max-width: 600px) {
+  h1 {
+      font-size: 2em;
   }
-  
-  @media screen and (min-width: 1200px) {
-    body {
-      padding: 20px;
-    }
-  
-    h1 {
-      font-size: 2.75rem;
-    }
-  
-    p {
-      font-size: 1.625rem;
-    }
+
+  p {
+      font-size: 1.4em;
   }
-  
+}
+
+/* Tablet Portrait */
+@media screen and (min-width: 600px) {
+  h1 {
+      font-size: 2.2em;
+  }
+
+  p {
+      font-size: 1.5em;
+  }
+}
+
+/* Tablet Landscape und kleinere Desktops */
+@media screen and (min-width: 900px) {
+  h1 {
+      font-size: 2.5em;
+  }
+
+  p {
+      font-size: 1.7em;
+  }
+}
+
+/* Große Desktops */
+@media screen and (min-width: 1200px) {
+  h1 {
+      font-size: 3em;
+  }
+
+  p {
+      font-size: 2em;
+  }
+}
