--- a/Grundaufbau/Templates/TemplateWithGrid.html
+++ b/Grundaufbau/Templates/TemplateWithGrid.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage</title>
-    <link rel="stylesheet" href="TemplateWithGrid.css">
+    <link rel="stylesheet" href="test.css">
 </head>
 <header>
         <img src="fotos/CarShop.png" alt="Blog Logo" class="logo">
@@ -18,29 +18,36 @@
         </ul>
     </nav>
 
-    <body>
+   
+
+    <footer>
         <div class="grid-container">
-            <p>Grid test 1</p>
-            <img src="fotos/CarShop.png" alt="">
-            <p>Grid test 2</p>
-            <img src="fotos/CarShop.png" alt="">
-            <p>Grid test 3</p>
+            <div class="grid-item">
+                <h4>Car Shop</h4>
+                <ul>
+                    <li><strong>Phonenumber:</strong> 079 526 42 38</li>
+                    <li><strong>Address:</strong> Hagenholzstrasse 111, 8050 Zürich</li>            
+                    <li><strong>E-Mail:</strong> CarShop@gmail.com</li>
+                </ul>
+            </div>
+            <div class="grid-item">
+                <div class="Contact Leona">
+                    <h4>Leona</h4>
+                    <ul>
+                        <li><strong>Phonenumber:</strong> 079 904 25 01 </li>           
+                        <li><strong>E-Mail:</strong> leona.istrefi@edu.tbz.ch</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="grid-item">
+                <div class="Contact Kristijan">
+                    <h4>Kristijan</h4>
+                    <ul>
+                        <li><strong>Phonenumber:</strong> 078 624 34 19 </li>           
+                        <li><strong>E-Mail:</strong> kristijan.lisica@edu.tbz.ch</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </body>
-    
-
-
-<footer>
-        <h4>Car Shop</h4>
-        <li><strong>Phonenumber:</strong> 079 526 42 38</li>
-        <li><strong>Address:</strong> Hagenholzstrasse 111, 8050 Zürich</li>            
-        <li><strong>E-Mail:</strong> CarShop@gmail.com</li>
-
-        <div class="Contact Leona">
-            <h4>Leona</h4>
-        <li><strong>Phonenumber:</strong> 079 604 25 01 </li>           
-        <li><strong>E-Mail:</strong> leona.istrefi@edu.tbz.ch</li>
-        </div>
-
     </footer>
 </html>
