--- a/Grundaufbau/Templates/TemplateWithGrid.css
+++ b/Grundaufbau/Templates/TemplateWithGrid.css
@@ -1,85 +1,110 @@
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-
-
-
-header {
-    background-color: rgba(0, 0, 0, 0.5); 
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  header {
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 20px;
     text-align: center;
-}
-
-header .logo {
+  }
+  header .logo {
     width: 100px;
     height: auto;
-}
-
-header h1 {
+  }
+  header h1 {
     font-size: 24px;
     margin-top: 10px;
-}
-
-nav {
-    background-color: rgba(0, 0, 0, 0.5); 
+    color: white;
+  }
+  
+  nav {
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 10px;
     text-align: center;
-}
-
-nav ul {
+  }
+  nav ul {
     list-style-type: none;
-}
-
-nav ul li {
+  }
+  nav ul li {
     display: inline-block;
     margin-right: 10px;
-}
-
-nav ul li a {
+  }
+  nav ul li a {
     color: white;
     text-decoration: none;
-    padding: 5px 10px;
-}
-
-nav ul li a:hover {
-    background-color: rgba(255, 255, 255, 0.1); 
-    border-radius: 5px;
-}
-
-main {
-    padding: 0px;
-}
-
-.welcome-section {
-    position: relative;
-    min-height: 300px; 
-    display: flex;
-    align-items: center;
-}
-
-
-footer {
-    background-color: rgba(0, 0, 0, 0.8); 
+    padding: 10px 20px;
+  }
+  nav ul li a:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+  }
+  
+  main {
+    padding: 20px;
+  }
+  
+  footer {
+    background-color: rgba(0, 0, 0, 0.8);
     color: white;
     text-align: left;
-    padding: 58px;
-    margin-top: 200px;
-    
+    padding: 50px;
+    margin-top: 458px;
     justify-content: space-between;
+  }
+  
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 20px;
+  }
+  
+  .grid-item {
+    padding: 20px;
+  } 
+
+  @media screen and (min-width: 600px) {
+    .team {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .grid-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
-.Contact.Leona {
-    text-align: center;
-    flex: 1;
-    
+@media screen and (min-width: 900px) {
+    header .logo {
+        width: 100px;
+    }
+    header h1 {
+        font-size: 32px;
+    }
+    nav ul li {
+        margin-right: 10px;
+    }
+    nav ul li a {
+        padding: 10px 20px;
+    }
+   
+    .grid-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
-.grid-container{
-   display: grid;
-   /* number of auto = how many columns */
-  grid-template-columns: auto auto auto auto;
+@media screen and (min-width: 1200px) {
+    header h1 {
+        font-size: 40px;
+    }
+   
 }
+
