included header everywhere

--- a/Projekt/Code/ForgotPassword.css
+++ b/Projekt/Code/ForgotPassword.css
@@ -10,6 +10,17 @@ body {
     background-color: #f5f5f5;
     overflow: hidden;
   }
+
+  header {
+    background-color: #f5f5f5;
+    padding: 20px;
+    text-align: center;
+  }
+header h1 {
+  text-align: center;
+  margin-bottom: 10px;
+    color: rgb(0, 0, 0);
+  }
   
   form {
     width: 300px;
@@ -42,10 +53,7 @@ body {
     background-color: #333333;
   }
   
-  h1 {
-    text-align: center;
-    margin-bottom: 10px;
-  }
+ 
   
   /* Kleine Smartphones  */
 @media screen and (max-width: 320px) {
