--- a/Projekt/Code/Login.css
+++ b/Projekt/Code/Login.css
@@ -19,6 +19,17 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
+
+  header {
+    background-color: #f5f5f5;
+    padding: 20px;
+    text-align: center;
+  }
+header h1 {
+  text-align: center;
+    margin-bottom: 10px;
+    color: rgb(0, 0, 0);
+  }
   
   label {
     margin-bottom: 5px;
@@ -49,10 +60,6 @@ body {
     background-color: #333333;
   }
   
-  h1 {
-    text-align: center;
-    margin-bottom: 10px;
-  }
   
   a {
     margin-top: 10px;
