--- a/Projekt/Code/PasswordResetConfirmation.css
+++ b/Projekt/Code/PasswordResetConfirmation.css
@@ -13,13 +13,19 @@ body {
     color: #333;
     padding: 20px;
   }
-  
-  h1 {
-    margin-bottom: 10px;
-    font-size: 2.75rem;
+  header {
+    background-color: #f5f5f5;
+    padding: 20px;
+    text-align: center;
   }
+header h1 {
+    font-size: 24px;
+    margin-top: 10px;
+    color: rgb(0, 0, 0);
+  }
+ 
   
-  p {
+  header p {
     margin: 0;
     font-size: 1.625rem;
   }
